# repo-setter

./: .buildinfo  .gitignore  .gitlab-ci-doxygen.yml  .gitlab-ci.yml  .gitmodules  LICENSE  Makefile  README.md  README.md.template  README_8md.html  annotated.html  annotated_dup.js  api.html  app_8py.html  app_8py.js  avg__feature_8py.html  avg__feature_8py.js  classes.html  classmain_1_1DemoDisplay-members.html  classmain_1_1DemoDisplay.html  classmain_1_1DemoDisplay.js  classmain_1_1DemoTest-members.html  classmain_1_1DemoTest.html  classmain_1_1DemoTest.js  dashboard_8py.html  dashboard_8py.js  dataset_8py.html  dataset_8py.js  demo.html  demos_8md.html  dir_1e74cc6533a1f262acfec17a463fff3d.html  dir_1e74cc6533a1f262acfec17a463fff3d.js  dir_1e74cc6533a1f262acfec17a463fff3d_dep.dot  dir_913bfe5cd49c15c10de83786c9f7c5a0.html  dir_913bfe5cd49c15c10de83786c9f7c5a0.js  dir_934812f6a3c98a4d07d1a225a9201868.html  dir_934812f6a3c98a4d07d1a225a9201868.js  dir_934812f6a3c98a4d07d1a225a9201868_dep.dot  dir_d48b48f33cb38456b4f8ffd89aa71b9b.html  dir_d48b48f33cb38456b4f8ffd89aa71b9b.js  (+68 more)
install/: .bash_aliases  .bashrc  .dockerignore  .env  .env.template  Dockerfile.editor  Dockerfile.js  Dockerfile.julia  Dockerfile.latex  Dockerfile.nodejs  Dockerfile.nodejs_optimized  Dockerfile.python  Dockerfile.python_optimized  Dockerfile.pytorch  docker-compose.online-images.yml  docker-compose.volumes.yml  docker-compose.volumes_disk.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_torch.txt
install/Dockerfiles/: Dockerfile.editor  Dockerfile.julia  Dockerfile.latex  (+4 more)
(+131 files in other folders)
